[project]
name = "mascope_backend"
version = "0.0.0"
description = "Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"
dependencies = [
    # internal
    "mascope_runtime",
    "mascope_chem",
    "mascope_thermo",
    "mascope_tofwerk",
    "mascope_file",
    "mascope_signal",
    "mascope_match",
    # external
    "colorcet~=3.1",
    "fastapi>=0.115,<0.116",
    "fastapi-users[oauth, sqlalchemy]>=15.0.2,<16",
    "httpx>=0.28.0,<0.29",
    "isospecpy>=2.2.2,<3",
    "nanoid~=2.0",
    "nest-asyncio~=1.6",
    "numpy~=1.26",
    "pandas~=2.2",
    "pyarrow>=18.0.0",
    "python-socketio~=5.11",
    "python-multipart>=0.0.31,<0.0.32",
    "pyyaml~=6.0",
    "redis[hiredis]>=7.1.0,<8", # TODO: v8 has breaking changes in async pub/sub
    "requests~=2.32",
    "rich>=13.7.1,<14",
    "scipy~=1.13",
    "sqlalchemy~=2.0",
    "typer>=0.15.2,<0.16",
    "uvicorn>=0.34,<0.35",
    "websocket-client~=1.8",
    "zarr==2.18.2", # TODO: Resolve dependency issue https://github.com/Karsa-Oy/Mascope/issues/479
    "numcodecs==0.15.1", # TODO: See issue above
    "tuspyserver==4.1.3", # TODO: Bug after tuspyserver 4.1.3, see issue https://github.com/karsa-oy/mascope/issues/1159
    "openpyxl>=3.1.5",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
