[project]
name = "mascope_cli"
version = "0.0.0"
description = "Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"
dependencies = [
    "mascope_runtime",
    "typer>=0.15.2,<0.16",
    "rich>=13.7.1,<14",
    # migrate commands
    "alembic>=1.18.1",
    "sqlalchemy~=2.0",
    # postgres commands
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
