[project]
name = "mascope_cli"
version = "0.0.0"
description = "Mascope's management CLI: install, launch, update and back up a Mascope deployment."
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "Apache-2.0"
# Operator surface only (init, prod, env, demo, logs, cert). Developer
# commands live behind the `dev` extra and a source-checkout gate in main.py.
dependencies = [
    "mascope_runtime[logs]",
    "typer>=0.15.2,<0.16",
    "rich>=13.7.1,<14",
]

[project.optional-dependencies]
# `mascope dev migrate` / `mascope dev db` — monorepo development only.
dev = [
    "alembic>=1.18.1",
    "sqlalchemy~=2.0",
    "psycopg2-binary>=2.9.11",
]
# `mascope demo build-bundle` / `verify` peak comparison (imported lazily).
demo = [
    "pandas>=2.0.0",
    "requests>=2.32.0,<3",
]

[project.urls]
homepage = "https://karsa.fi/"
repository = "https://github.com/karsa-oy/mascope"
"Bug Tracker" = "https://github.com/karsa-oy/mascope/issues"

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
