[project]
name = "mascope_cli"
version = "2026.7.8"
description = "Mascope's operations CLI: install, launch and back up a Mascope deployment."
classifiers = [
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
maintainers = [
    { name = "Oskari Kausiala", email = "oskari.kausiala@karsa.fi" },
]
license.text = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# Operator surface only (init, prod, env, demo, logs, cert). Developer
# commands live behind the `dev` extra and a source-checkout gate in main.py.
dependencies = [
    "mascope_runtime[logs]>=2026.7.7",
    "typer>=0.26.8,<0.27",
    "rich>=13.7.1,<14",
]

[project.scripts]
mascope = "mascope_cli.main:app"

[project.optional-dependencies]
# `mascope dev migrate` / `mascope dev db` — monorepo development only.
dev = [
    "alembic>=1.18.1",
    "sqlalchemy~=2.0",
    "psycopg2-binary>=2.9.12",
]
# `mascope demo build-bundle` / `verify` peak comparison (imported lazily).
demo = [
    "pandas>=2.0.0",
    "requests>=2.32.0,<3",
]

[project.urls]
homepage = "https://karsa.fi/"
repository = "https://github.com/karsa-oy/mascope"
"Bug Tracker" = "https://github.com/karsa-oy/mascope/issues"

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
